# NUchat

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-freebsd.yml  build-linux.yml  build-macos.yml  build-windows.yml
docs/: COMMANDS.md  MENUS.md  PLUGINS.md  SCRIPTING.md
plugins/: CMakeLists.txt
plugins/exampleplugin/: CMakeLists.txt  ExamplePlugin.cpp  ExamplePlugin.h
qml/: AboutDialog.qml  AwayLogDialog.qml  BanListDialog.qml  ChannelListDialog.qml  ChannelModeDialog.qml  ChannelView.qml  DccDialog.qml  EmojiPicker.qml  HexChatMigrateDialog.qml  IgnoreListDialog.qml  JoinChannelDialog.qml  NetworkListDialog.qml  NickChangeDialog.qml  NickList.qml  NickListPanel.qml  PreferencesDialog.qml  QuickConnectDialog.qml  RawLogDialog.qml  ScriptsDialog.qml  SearchDialog.qml  ServerTree.qml  SettingsDialog.qml  ThemeManager.qml  TopicDialog.qml  UrlGrabberDialog.qml  main.qml
resources/: nuchat.desktop
resources/themes/: default.json
scripts/: example.lua  example.py  hello.js
src/: CMakeLists.txt  CommandTable.cpp  DccManager.cpp  DccManager.h  IRCClient.cpp  IRCClient.h  IRCConnectionManager.cpp  IRCConnectionManager.h  ImageDownloader.cpp  ImageDownloader.h  IrcConnection.cpp  IrcConnection.h  Logger.cpp  Logger.h  LuaScriptEngine.cpp  LuaScriptEngine.h  MessageModel.cpp  MessageModel.h  MessageParser.cpp  MessageParser.h  NotificationManager.cpp  NotificationManager.h  PluginInterface.h  PluginManager.cpp  PluginManager.h  PythonScriptEngine.cpp  PythonScriptEngine.h  ScriptManager.cpp  ScriptManager.h  ServerChannelModel.cpp  ServerChannelModel.h  Settings.cpp  Settings.h  SpellChecker.cpp  SpellChecker.h  SpellHighlighter.cpp  SpellHighlighter.h  ThemeManager.cpp  ThemeManager.h  Version.h  (+2 more)
tests/: CMakeLists.txt  test_hexchatimport.cpp  test_ircparsing.cpp  test_messageparser.cpp  test_settings.cpp
